samples/_failures_safe/1761076324_89c55c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8109eb50.c: In function ‘main’:
./samples/SAFE/__tmp_8109eb50.c:129:5: error: expected expression at end of input
  129 |     if (fgets(buffer, sizeof(buffer), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_8109eb50.c:129:5: error: expected declaration or statement at end of input
